# mrxsierra.github.io

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  compose.yaml  index.html  mkdocs.yml  note.md  project-post-prompt.md  pyproject.toml  requirements.txt  resume_contexts.md  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
assets/css/: index.css
assets/js/: index.js
blog/: index.html
blog/archive/2023/: index.html
blog/archive/2025/: index.html
blog/b-1/: index.html
blog/b-2/: index.html
blog/category/database/: index.html
contact/: index.html
docs/: about.md  contact.md  index.md  resume.md  tags.md  test.md
docs/assets/css/: index.css
docs/assets/js/: index.js
docs/blog/: .authors.yml  index.md
docs/blog/posts/: 1-schema-diff.md  2-query-interaction-diff.md  2-query-interection-diff.md  b-1.md  b-2.md
docs/projects/: ems-db.md  gstn-pbc.md  index.md  naukari-webscraper.md  naukri-webscraper.md  p-1.md  paraxcel.md  s3-faker.md  test-site.md
includes/: abbr.md
javascripts/: index.js
projects/: index.html
projects/ems-db/: index.html
projects/gstn-pbc/: index.html
projects/naukari-webscraper/: index.html
projects/naukri-webscraper/: index.html
projects/p-1/: index.html
projects/p-2/: index.html
projects/paraxcel/: index.html
projects/s3-faker/: index.html
projects/test-site/: index.html
prompts/: project-post-prompt.md  skill-assessment-prompt.md
resume/: index.html
search/: search_index.json
stylesheets/: extra.css  index.css
tags/: index.html
test/: index.html
(+7 files in other folders)
