[project]
name = "mrxsierra-github-io"
version = "0.1.0"
description = "my site"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material[imaging]>=9.6.9",
    "pymdown-extensions>=10.14.3",
    "mkdocs-blogging-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-git-committers-plugin-2>=2.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
